/*
 * Copyright 2021-2021 Monkey Group.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.monkey.mmq.core.entity";

message WriteRequest {
  string group = 1;
  string key = 2;
  bytes data = 3;
  string type = 4;
  string operation = 5;
  map<string, string> extendInfo = 6;
}

message ReadRequest {
  string group = 1;
  bytes data = 2;
  map<string, string> extendInfo = 3;
}

message InternalMessage {
  string address = 1;
  string processId = 2;
  string topic = 3;
  int32 mqttQoS = 4;
  bytes messageBytes = 5;
  bool retain = 6;
  bool dup = 7;
  int32 messageId = 8;
  string clientId = 9;
}

message RejectClient {
  string clientId = 1;
  string address = 2;
}

message Response {
  bytes data = 1;
  string errMsg = 2;
  bool success = 3;
}

